index page complete

--- a/index.css
+++ b/index.css
@@ -19,4 +19,9 @@ html {
     min-width: 220px;
 }
 
+.btn-outline-primary {
+    color: #007bff;
+    border-color: #007bff;
+    background: #007bff;
+}
 /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
